--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <meta name="format-detection" content="telephone=no">
-    <meta name="format-detection" content="date=no">
-    <meta name="format-detection" content="email=no">
-    <meta name="google" content="notranslate">
-    <meta name="author" content="React">
-    <meta name="designer" content="React">
     <title>Start React Project</title>
   </head>
   <body>
